# efm32tg-pacs

./: CHANGELOG.md  README.md
pacs/efm32tg/: Cargo.toml  README.md  build.rs
pacs/efm32tg/efm32tg108/: Cargo.toml  README.md  device.x
pacs/efm32tg/efm32tg108/src/: lib.rs
pacs/efm32tg/efm32tg110/: Cargo.toml  README.md
pacs/efm32tg/efm32tg110/src/: lib.rs
pacs/efm32tg/efm32tg210/: Cargo.toml  README.md
pacs/efm32tg/efm32tg210/src/: lib.rs
pacs/efm32tg/efm32tg222/: Cargo.toml  README.md
pacs/efm32tg/efm32tg222/src/: lib.rs  msc.rs
pacs/efm32tg/efm32tg225/: Cargo.toml  README.md
pacs/efm32tg/efm32tg225/src/: lib.rs
pacs/efm32tg/efm32tg230/: Cargo.toml  README.md
pacs/efm32tg/efm32tg230/src/: lib.rs
pacs/efm32tg/efm32tg232/: Cargo.toml  README.md
pacs/efm32tg/efm32tg232/src/: lib.rs  prs.rs
pacs/efm32tg/efm32tg822/: Cargo.toml  README.md
pacs/efm32tg/efm32tg822/src/: lib.rs
pacs/efm32tg/efm32tg825/: Cargo.toml  README.md
pacs/efm32tg/efm32tg825/src/: lib.rs
pacs/efm32tg/efm32tg840/: Cargo.toml  README.md
pacs/efm32tg/efm32tg840/src/: emu.rs  lib.rs
pacs/efm32tg/efm32tg842/: Cargo.toml  README.md
pacs/efm32tg/efm32tg842/src/: lib.rs
pacs/efm32tg/src/: lib.rs
pacs/efm32tg/src/efm32tg108/: dma.rs  mod.rs
pacs/efm32tg/src/efm32tg110/: mod.rs
pacs/efm32tg/src/efm32tg210/: device.x  mod.rs
pacs/efm32tg/src/efm32tg222/: emu.rs  mod.rs  timer0.rs
pacs/efm32tg/src/efm32tg225/: mod.rs
pacs/efm32tg/src/efm32tg230/: mod.rs
pacs/efm32tg/src/efm32tg232/: mod.rs
pacs/efm32tg/src/efm32tg822/: dma.rs  mod.rs
pacs/efm32tg/src/efm32tg825/: device.x  mod.rs
pacs/efm32tg/src/efm32tg840/: lcd.rs  mod.rs  prs.rs
pacs/efm32tg/src/efm32tg842/: lcd.rs  mod.rs  msc.rs
pacs/efm32tg11b/: Cargo.toml  README.md  build.rs
pacs/efm32tg11b/.cargo/: config.toml
pacs/efm32tg11b/efm32tg11b120/: Cargo.toml  README.md
pacs/efm32tg11b/efm32tg11b120/src/: cmu.rs  gpcrc.rs  lib.rs  pcnt0.rs
pacs/efm32tg11b/efm32tg11b140/: Cargo.toml  README.md
pacs/efm32tg11b/efm32tg11b140/src/: lib.rs  prs.rs  rtcc.rs
pacs/efm32tg11b/efm32tg11b320/: Cargo.toml  README.md
pacs/efm32tg11b/efm32tg11b320/src/: lib.rs
pacs/efm32tg11b/efm32tg11b340/: Cargo.toml  README.md
pacs/efm32tg11b/efm32tg11b340/src/: gpio.rs  i2c0.rs  lib.rs  vdac0.rs
pacs/efm32tg11b/efm32tg11b520/: Cargo.toml  README.md
pacs/efm32tg11b/efm32tg11b520/src/: can0.rs  leuart0.rs  lib.rs
pacs/efm32tg11b/efm32tg11b540/: Cargo.toml  README.md  device.x
pacs/efm32tg11b/efm32tg11b540/src/: lib.rs
pacs/efm32tg11b/src/: lib.rs
pacs/efm32tg11b/src/efm32tg11b120/: acmp1.rs  cryotimer.rs  emu.rs  ldma.rs  mod.rs  prs.rs  rmu.rs  smu.rs  wtimer0.rs
pacs/efm32tg11b/src/efm32tg11b140/: cmu.rs  cryotimer.rs  device.x  emu.rs  gpio.rs  mod.rs  pcnt0.rs  rmu.rs  timer0.rs  trng0.rs  usart2.rs
pacs/efm32tg11b/src/efm32tg11b320/: ldma.rs  lesense.rs  (+4 more)
(+1834 files in other folders)
