[package]
name = "efm32tg-pac"
description = "Peripheral access API for EFM32TG MCU (generated using svd2rust)"
homepage = "https://github.com/efm32-rs/efm32tg-pacs"
version = "0.1.2"
authors = [ "Vladimir Petrigo <vladimir.petrigo@gmail.com>",]
license = "BSD-3-Clause"
keywords = [ "no-std", "arm", "cortex-m", "efm32",]
categories = [ "embedded", "hardware-support", "no-std",]
repository = "https://github.com/efm32-rs/efm32tg-pacs"
readme = "README.md"
edition = "2021"

[dependencies]
cortex-m = "~0.7"
vcell = "~0.1"

[features]
default = [ "rt",]
rt = [ "cortex-m-rt/device",]
efm32tg108 = []
efm32tg110 = []
efm32tg210 = []
efm32tg222 = []
efm32tg225 = []
efm32tg230 = []
efm32tg232 = []
efm32tg822 = []
efm32tg825 = []
efm32tg840 = []
efm32tg842 = []

[dependencies.portable-atomic]
version = "~1"
default-features = false

[dependencies.critical-section]
version = "~1"
optional = true

[dependencies.cortex-m-rt]
version = "~0.7"
optional = true

[package.metadata.docs.rs]
features = [ "rt", "efm32tg108", "efm32tg842",]
default-target = "thumbv7m-none-eabi"
targets = []
