[package]
name = "efm32tg11b-pac"
description = "Peripheral access API for EFM32TG11B MCU (generated using svd2rust)"
homepage = "https://github.com/efm32-rs/efm32tg-pacs"
version = "0.1.1"
authors = [ "Vladimir Petrigo <vladimir.petrigo@gmail.com>",]
license = "BSD-3-Clause"
keywords = [ "no-std", "arm", "cortex-m", "efm32",]
categories = [ "embedded", "hardware-support", "no-std",]
repository = "https://github.com/efm32-rs/efm32tg-pacs"
readme = "README.md"
edition = "2021"

[dependencies]
cortex-m = "~0.7"
vcell = "~0.1"
portable-atomic = { version = "1.0.0", features = ["critical-section"]}

[features]
default = ["rt"]
rt = ["cortex-m-rt/device"]
efm32tg11b120 = []
efm32tg11b140 = []
efm32tg11b320 = []
efm32tg11b340 = []
efm32tg11b520 = []
efm32tg11b540 = []

[dependencies.cortex-m-rt]
version = "~0.7"
optional = true

[package.metadata.docs.rs]
features = [ "rt", "efm32tg11b120", "efm32tg11b540",]
default-target = "thumbv6m-none-eabi"
targets = []
